--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,8 +13,9 @@ jobs:
           submodules: recursive
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.7
-      - run: pip install pipenv
-      - run: pipenv install --skip-lock
-      - run: pipenv run pre-commit install
-      - run: pipenv run pre-commit run --all-files
+          python-version: 3.10
+      - run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+      - run: bash Miniconda3-latest-Linux-x86_64.sh -b -u
+      - run: conda env create -f env.yml
+      - run: conda run -n env pre-commit install
+      - run: pipenv run -n env pre-commit run --all-files
