--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,4 +18,4 @@ jobs:
       - run: bash Miniconda3-latest-Linux-x86_64.sh -b -u
       - run: conda env create -f env.yml
       - run: conda run -n env pre-commit install
-      - run: pipenv run -n env pre-commit run --all-files
+      - run: conda run -n env pre-commit run --all-files
