--- a/env.yml
+++ b/env.yml
@@ -5,7 +5,7 @@ dependencies:
   - pip
   - python=3.10
   - pip:
-      - black == 20.8b1
+      - black
       - isort
       - flake8
       - pre-commit
