--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,8 +14,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-      - run: bash Miniconda3-latest-Linux-x86_64.sh -b -u
-      - run: conda env create -f env.yml
-      - run: conda run -n env pre-commit install
-      - run: conda run -n env pre-commit run --all-files
+      - run: $CONDA/bin/conda env create -f env.yml
+      - run: $CONDA/bin/conda run -n env pre-commit install
+      - run: $CONDA/bin/conda run -n env pre-commit run --all-files
