--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: $CONDA/bin/conda env create -f env.yml
-      - run: $CONDA/bin/conda run -n env pre-commit install
-      - run: $CONDA/bin/conda run -n env pre-commit run --all-files
+          cache: "pip"
+      - run: pip install pre-commit
+      - run: pre-commit install
+      - run: pre-commit run --all-files
